force-app/main/default/objects/Stock_Reservation__c/Stock_Reservation__c.object-meta.xml
<CustomObject>
    <label>Stock Reservation</label>
    <nameField>
        <displayFormat>Res-{yyyy}{mm}{000}</displayFormat>
        <label>Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Reservations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>