force-app/main/default/objects/Stock_Reservation__c/fields/Campaign_Invited_members__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Invited_members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Invited members</label>
    <referenceTo>Campaign_Invited_members__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>