force-app/main/default/objects/Stock_Reservation__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancel Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>