force-app/main/default/objects/Stock_Reservation__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color Code</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>