force-app/main/default/objects/Stock_Reservation__c/fields/Created_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_This_Month__c</fullName>
    <formula>IF( 
				
					(MONTH(DATEVALUE(Opportunity__r.CreatedDate )) = MONTH(TODAY())	&amp;&amp;  YEAR(DATEVALUE(Opportunity__r.CreatedDate )) = YEAR(TODAY()) )
				    ||
				 (MONTH(DATEVALUE(CreatedDate )) = MONTH(TODAY())) 	&amp;&amp;  YEAR(DATEVALUE(CreatedDate )) = YEAR(TODAY())
						, TRUE
						,	FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created This Month?</label>
    <type>Checkbox</type>
</CustomField>