force-app/main/default/objects/Stock_Reservation__c/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <formula>if(Opportunity__r.Lead__c != null, Opportunity__r.Lead__r.LastName, IF(Opportunity__r.Contact_Person__c != null, Opportunity__r.Contact_Person__r.LastName, &apos;&apos;))</formula>
    <label>Customer Last Name</label>
    <type>Text</type>
</CustomField>