force-app/main/default/objects/Stock_Reservation__c/fields/Customer_Social_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Social_ID__c</fullName>
    <label>Customer Social ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>