force-app/main/default/objects/Stock_Reservation__c/fields/Franchise_Code__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Code__c</fullName>
    <label>Franchise Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CITCV</fullName>
            </value>
            <value>
                <fullName>CITPC</fullName>
            </value>
            <value>
                <fullName>KIACV</fullName>
            </value>
            <value>
                <fullName>KIAPC</fullName>
            </value>
            <value>
                <fullName>MITCV</fullName>
            </value>
            <value>
                <fullName>MITPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>