force-app/main/default/objects/Stock_Reservation__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(Opportunity__r.Contact_Person__c != null, TEXT(Opportunity__r.Contact_Person__r.Gender__c), IF(Opportunity__r.Lead__c != null, TEXT(Opportunity__r.Lead__r.Gender__c), &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>