force-app/main/default/objects/Stock_Reservation__c/fields/Is_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Is_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fleet Indicator for Stock Reservation</description>
    <inlineHelpText>Fleet Indicator for Stock Reservation</inlineHelpText>
    <label>Is Fleet ?</label>
    <type>Checkbox</type>
</CustomField>