force-app/main/default/objects/Stock_Reservation__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model Code</label>
    <referenceTo>Model_Master__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>