force-app/main/default/objects/Stock_Reservation__c/fields/Model_Year_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Year_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model Year Code</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Model_Year_Master__c.Model_Master__c</field>
            <operation>equals</operation>
            <valueField>$Source.Model_Code__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Model_Year_Master__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>