force-app/main/default/objects/Stock_Reservation__c/fields/NRIC__c.field-meta.xml
<CustomField>
    <fullName>NRIC__c</fullName>
    <formula>IF(Opportunity__r.Contact_Person__c != null, Opportunity__r.Contact_Person__r.NRIC__c, IF(Opportunity__r.Lead__c != null,  Opportunity__r.Lead__r.NRIC__c, &apos;&apos;))</formula>
    <label>NRIC</label>
    <type>Text</type>
</CustomField>