force-app/main/default/objects/Stock_Reservation__c/fields/Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Online_Offline__c</fullName>
    <description>Online/Offline</description>
    <formula>IF( ISPICKVAL(Stock_Source__c,&quot;&quot;) , &quot;Offline&quot;, &quot;Online&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online/Offline</label>
    <type>Text</type>
</CustomField>