force-app/main/default/objects/Stock_Reservation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>