force-app/main/default/objects/Stock_Reservation__c/fields/Opportunity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact__c</fullName>
    <formula>IF(Opportunity__r.Contact_Person__c != null, true, false)</formula>
    <label>Opportunity Contact?</label>
    <type>Checkbox</type>
</CustomField>