force-app/main/default/objects/Stock_Reservation__c/fields/Opportuntiy_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportuntiy_Created_Date__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportuntiy Created Date</label>
    <type>Date</type>
</CustomField>