force-app/main/default/objects/Stock_Reservation__c/fields/Package_Header_From_PickList__c.field-meta.xml
<CustomField>
    <fullName>Package_Header_From_PickList__c</fullName>
    <description>This field is a temporary field to contain the Id of the package header choose from the picklist on page 0, not a lookup field to Package_Header__c obj.</description>
    <label>Package Header From PickList</label>
    <length>18</length>
    <type>Text</type>
</CustomField>