force-app/main/default/objects/Stock_Reservation__c/fields/Re_Reserve_To_VSMS__c.field-meta.xml
<CustomField>
    <fullName>Re_Reserve_To_VSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Reserve To VSMS?</label>
    <type>Checkbox</type>
</CustomField>