force-app/main/default/objects/Stock_Reservation__c/fields/Registered_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Vehicle</label>
    <referenceTo>Registered_Vehicle__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>