force-app/main/default/objects/Stock_Reservation__c/fields/Reservation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Start_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Start Date</label>
    <type>DateTime</type>
</CustomField>