force-app/main/default/objects/Stock_Reservation__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Stock Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reserve</fullName>
                <default>true</default>
                <label>Reserve</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Indent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>