force-app/main/default/objects/Stock_Reservation__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>IF(Opportunity__r.Contact_Person__c != null, TEXT(Opportunity__r.Contact_Person__r.Salutation), IF(Opportunity__r.Lead__c != null, TEXT(Opportunity__r.Lead__r.Salutation), &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>