force-app/main/default/objects/Stock_Reservation__c/fields/Trim_Code__c.field-meta.xml
<CustomField>
    <fullName>Trim_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trim Code</label>
    <referenceTo>Trim_Master__c</referenceTo>
    <relationshipLabel>Stock Reservations</relationshipLabel>
    <relationshipName>Stock_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>