force-app/main/default/objects/Stock_Reservation__c/fields/Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Condition__c</fullName>
    <formula>TEXT(Vehicle_Master__r.Vehicle_Condition__c)</formula>
    <label>Vehicle Condition</label>
    <type>Text</type>
</CustomField>