force-app/main/default/objects/Stock_Reservation__c/fields/Vehicle_Location__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Location__c</fullName>
    <formula>Vehicle_Master__r.Location__c</formula>
    <label>Vehicle Location</label>
    <type>Text</type>
</CustomField>