force-app/main/default/objects/Stock_Reservation__c/fields/Vehicle_Reservation_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reservation_No__c</fullName>
    <formula>Vehicle_Master__r.Reservation_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Reservation No.</label>
    <type>Text</type>
</CustomField>