force-app/main/default/objects/Stock_Reservation__c/fields/X18_Digit_SR_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SR_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit SR ID</label>
    <type>Text</type>
</CustomField>