force-app/main/default/objects/Stock_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Customer_Social_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Model_Year_Code__c</columns>
    <columns>Reservation_Status__c</columns>
    <columns>Vehicle_Master__c</columns>
    <columns>Vehicle_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Agreement_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>