force-app/main/default/objects/Stock_Reservation__c/listViews/My_Stock_Reservation.listView-meta.xml
<ListView>
    <fullName>My_Stock_Reservation</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Agreement_No__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Mobile_Number__c</columns>
    <columns>Model_Description__c</columns>
    <columns>Reservation_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Vehicle_Status__c</columns>
    <columns>Model_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Franchise_Code__c</field>
        <operation>equals</operation>
        <value>KIAPC</value>
    </filters>
    <filters>
        <field>Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Reserve</value>
    </filters>
    <label>My Stock Reservation</label>
</ListView>