force-app/main/default/objects/Stock_Reservation__c/listViews/Reserved.listView-meta.xml
<ListView>
    <fullName>Reserved</fullName>
    <columns>NAME</columns>
    <columns>Customer_Social_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Model_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Reserve</value>
    </filters>
    <label>Reserved</label>
</ListView>